--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -1,20 +1,56 @@
-es:
+es:   
 
-  layouts:
-    application:
-      home:         "Inicio"
-      questions:    "Preguntas"
-      news:         "Noticias"
-      contact:      "Contacto"
+  layouts:    
+    application:    
+      home:            "Inicio"
+      questions:        "Preguntas"
+      news:            "Noticias"
+      contact:          "Contacto"
+      orders:          "Pedidos"
+      products:        "Productos"
+      users:            "Usuario"
+      logout:          "Cerrar sesión"
 
-  store:
-    index:
-      title_html:   "Su Cat&aacute;logo de Pragmatic"
-    product:
-      add_html:     "A&ntilde;adir al Carrito"
+  store:    
+    index:    
+      title_html:      "Su Cat&aacute;logo de Pragmatic"
+    product:    
+      add_html:        "A&ntilde;adir al Carrito"
 
-  carts:
-    cart:
-      title:         "Carrito de la Compra"
-      empty:         "Vaciar Carrito"
-      checkout:      "Compar"
+  carts:    
+    cart:   
+      title:             "Carrito de la Compra"
+      empty:             "Vaciar Carrito"
+      checkout:         "Compar"
+  
+  number:   
+    currency:   
+      format:   
+        unit:           "$US"
+        precision:       2
+        separator:       ","
+        delimiter:       "."
+        format:         "%n&nbsp;%u"
+
+  orders:   
+    new:    
+      legend:           "Por favor, introduzca sus datos"
+    form:   
+      name:             "Nombre"
+      address_html:     "Direcci&oacute;n"
+      email:            "E-mail"
+      pay_type:         "Forma de pago"
+      pay_prompt_html:  "Seleccione un méteo de pago"
+      submit:           "Realizar Pedido"
+      pay_types:
+        "Check":            "Cheque"
+        "Credit card":      "Tarjeta de Crédito"
+        "Purchase order":   "Orden de Compra"
+    check:
+      routing_number:   "# de Enrutamiento"
+      account_number:   "# de Cuenta"
+    cc:
+      cc_number:        "Numéro"
+      expiration_date:  "Expiración"
+    po:
+      po_number:        "Número"
