--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -54,3 +54,24 @@ es:
       expiration_date:  "Expiración"
     po:
       po_number:        "Número"
+
+  activerecord:
+    models:
+      order:            "pedido"
+    attributes:
+      order:
+        address:        "Direcci&oacute;n" 
+        name:           "Nombre"
+        email:          "E-mail"
+        pay_type:       "Forma de pago"
+    errors:
+      messages:
+        inclusion:      "no est&aacute; includio en la lista"
+        blank:          "no puede quedar en blacno"
+  
+  errors:
+    template:
+      body:             "Hay problemas con los siguientes campos:"
+      header:
+        one:            "1 error ha impedio que este %{model} se guarde"
+        other:          "%{count} errores han impedido que este %{model} se guarde"
